# pandastable

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES  CONTRIBUTING.md  LICENSE  LICENSE.backup  MANIFEST.in  README.md  __init__.py  app.py  core.py  data.py  description.txt  dialogs.py  freeze.py  images.py  index.html  io.py  main.py  params.json  plotting.py  prefs.py  pyproject.toml  setup.py  snapcraft.yaml  testing.py
conda-build/: meta.yaml
doc/: Makefile  requirements.txt
doc/source/: conf.py  dataexplore.rst  description.rst  examples.rst  index.rst  modules.rst  pandastable.rst
examples/: hello_pandastable_world.py  simpletests.py  table_gui.py  test.csv
gui/: dataexplore.desktop
pandastable/: __init__.py  app.py  config.py  core.py  data.py  debug.py  dialogs.py  filtering.py  handlers.py  headers.py  images.py  io.py  plotting.py  plugin.py  preferences.py  prefs.py  rename.py  stats.py  testing.py  tests.py  util.py
pandastable/datasets/: co2-ppm-mauna-loa.csv  cso_employment.mpk  eurostat_popdensity_by_NUTS.mpk  iris.csv  iris.mpk  miRNA.csv  miRNA.mpk  pima.csv  pima.mpk  tips.mpk  titanic3.csv  titanic3.mpk  zoo_dataset.csv
pandastable/plugins/: DEanalysis.R  Limma.R  batchprocess.py  diffexpr.py  example.py  ipythonview.py  mdanalysis.py  remotedata.py  rename.py  seabornplots.py
pandastable/stubs/: pandastable.pyi
snap/: snapcraft.yaml
snap/gui/: dataexplore.desktop
stylesheets/: stylesheet.css
trunk/: CHANGES  README  __init__.py  app.py  core.py  data.py  dialogs.py  images.py  io.py  plotting.py  setup.py
(+1 files in other folders)
